--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
+    "ember-cli-fastboot": "^1.1.3",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -41,9 +42,11 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.0.0",
     "eslint-plugin-ember": "^5.0.0",
+    "fullscreen-api-polyfill": "^1.1.2",
     "loader.js": "^4.2.3",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.1.0"
+    "postcss-import": "^11.1.0",
+    "prember": "^0.2.2"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
