--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-code-snippet": "^2.0.1",
     "ember-data": "~3.0.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
