--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-code-snippet": "^2.0.1",
     "ember-data": "~3.0.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-href-to": "^1.15.1",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
