moving time-control into a sidebar, and enhancing mascots demo

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-href-to": "^1.15.1",
     "ember-load-initializers": "^1.0.0",
+    "ember-lodash": "^4.18.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.0.0",
