--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "ember-ajax": "^3.0.0",
     "ember-animated": "^0.1.0",
     "ember-animated-tools": "^0.1.1",
-    "ember-cli": "~3.0.0",
+    "ember-cli": "ember-cli/ember-cli#284b5afb27f79a2a33240fada535731866d79b93",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
@@ -44,7 +44,7 @@
     "ember-lodash": "^4.18.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
-    "ember-source": "~3.0.0",
+    "ember-source": "https://s3.amazonaws.com/builds.emberjs.com/canary/shas/76dc4deb70cd1e5ae7d83374161925af50946a01.tgz",
     "eslint-plugin-ember": "^5.0.0",
     "fullscreen-api-polyfill": "^1.1.2",
     "loader.js": "^4.2.3",
