--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "@ember/optional-features": "^0.5.2",
     "broccoli-asset-rev": "^2.4.5",
     "caniuse-lite": "^1.0.30000697",
     "ember-ajax": "^3.0.0",
@@ -27,7 +28,7 @@
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
-    "ember-cli-fastboot": "^1.1.3",
+    "ember-cli-fastboot": "iezer/ember-cli-fastboot#rehydration+module-unification",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -43,7 +44,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-lodash": "^4.18.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^4.0.0",
+    "ember-resolver": "^4.3.0",
     "ember-source": "https://s3.amazonaws.com/builds.emberjs.com/canary/shas/76dc4deb70cd1e5ae7d83374161925af50946a01.tgz",
     "eslint-plugin-ember": "^5.0.0",
     "fullscreen-api-polyfill": "^1.1.2",
